<resources>
    <string name="app_name">RailChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_travel_Settings">Your Travels</string>
    <string name="title_activity_main_menue">main_menue</string>

    <string name="myTravels">My Travels</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="add_button">Add</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_railchat_main_menue">railchat_main_menue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="date_text">Date</string>
    <string name="station_to">To</string>
    <string name="station_from">From</string>
    <string name="date_hint">Pick date</string>
    <string name="station_to_hint">to which station</string>
    <string name="station_from_hint">from which station</string>
    <string name="train_hint">pick train</string>
    <string name="train_text">Train</string>
    <string name="new_travel_save">Save</string>
    <string name="new_travel_date_title">When will you do your trip?</string>
    <string name="new_travel_train_title">Which train do you want to take?</string>
    <string name="new_travel_stations_title">Where do you want to go?</string>
    <string name="new_travel_save_title">Do you want to save this travel?</string>
    <string name="new_travel_listitem_persons_text">Persons</string>
    <string name="travel_menue_message_no_travels">You dont have any travels saved. :(</string>


    <string name="message_no_date_picked">Please pick date</string>
    <string name="message_no_station_picked">Please pick a station</string>

    <string name="facebook_application_id" translatable="false">920790128018530</string>
    <string name="title_activity_railchat__my__travels__menu__test">Railchat_My_Travels_Menu_Test
    </string>
    <string name="title_activity_railchat__new__travel">Railchat_New_Travel</string>
    <string name="title_activity_my__travels">My_Travels</string>
    <string name="title_activity_main">MainActivity</string>


</resources>
